Latest ticket issues -> 29, 30, 31, 32

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1648,6 +1648,7 @@
     "picture_evaluation": "Picture Evaluation",
     "diabetes": "Diabetes",
     "place_of_residence": "Place of Residence",
+    "task_name": "Task Name",
     "treatment_so_far": "Treatment so far",
     "family_history": "Family history",
     "place_of_birth": "Place of birth",
