--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1722,7 +1722,8 @@
     "Feedback_submit_successfully":"Feedback submit successfully",
     "understood_explaination":"Did you understood the doctor explaination?",
     "satisfied_service":"Are you satisfied with the service?",
-    "Is_it_fast_service": "Is it fast service?"
+    "Is_it_fast_service": "Is it fast service?",
+    "correct_information_of_CARD":"Please fill the full or correct information of CARD"
 
   }
 }
