All languages changes set the hospital id of aimedix

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -58,7 +58,7 @@
 		"Staff_SENDREC": "SEND RECRUITMENT FORM",
 		"profile": "Profil",
 		"information": "Information",
-		"created_user_id_and_pin": "Benutzer-ID und PIN erstellt",
+		"created_user_id_and_pin": "Benutzer-ID und STIFT erstellt",
 		"profile_info": "Dies sind Ihre Profilinformationen, auf die Ärzte Ihres Vertrauens und diejenigen, mit denen Sie Ihre Profil-ID und PIN teilen, zugreifen können.",
 		"ID": "ID",
 		"speciality": "Fachbereich",
@@ -70,7 +70,7 @@
 		"QR_code": "QR-Code",
 		"Change": "Ändern",
 		"visibility": "Sichtbarkeit",
-		"edit_id_pin": "Sie können Ihre ID und/oder Ihre PIN so oft ändern, wie Sie es wünschen.",
+		"edit_id_pin": "Sie können Ihre ID und/oder Ihre STIFT so oft ändern, wie Sie es wünschen.",
 		"edit": "Bearbeiten",
 		"and": "und",
 		"is": "ist",
