Minor changes for open fields given by stefan sir

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -5,7 +5,7 @@
     "login_LOGIN_btn": "LOG IN",
     "login_an_account": "don't have an account?",
     "login_Registerhere": "Register here",
-    "Register_for_Aimedis": "Register for AIS",
+    "Register_for_Aimedis": "Register for Aimedis Online Diagnose",
     "Register_Name": "Name",
     "Register_email": "E-mail address",
     "Register_Password": "Password",
@@ -1662,7 +1662,7 @@
     "itch": "Itch",
     "size_progress": "Size progress",
     "warm": "Warm",
-    "fever_body_temp": "If you have Fever what is your Body Temp? (Temp in degree Fahrenheit)",
+    "fever_body_temp": "If you have Fever what is your Body Temp? (Temp in degree Celsius)",
     "sun_before_how_long": "Have you been in the sun before, How long?",
     "how_cold_long": "Have you been in the Cold (lower then -5C), How long?",
     "sexual_activities": "Did you had Sexual Activities before ?",
