--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1733,6 +1733,7 @@
     "unfollow": "Unfollow",
     "since": "since",
     "not_followed_by_yet": "not followed by yet",
-    "change_citizenship": "Do you want to change the Citizenship country according your new mobile country code?"
+    "change_citizenship": "Do you want to change the Citizenship country according your new mobile country code?",
+    "fill_citizenship":"Please fill the Citizenship country"
   }
 }
