--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1734,6 +1734,8 @@
     "since": "since",
     "not_followed_by_yet": "not followed by yet",
     "change_citizenship": "Do you want to change the Citizenship country according your new mobile country code?",
-    "fill_citizenship":"Please fill the Citizenship country"
+    "fill_citizenship":"Please fill the Citizenship country",
+    "sexual_act_check":"Sexual Activities",
+    "enter_cold":"Enter Cold value"
   }
 }
